view invoice payment

--- a/stock_picking_extended/i18n/it.po
+++ b/stock_picking_extended/i18n/it.po
@@ -592,3 +592,8 @@ msgstr "Aspetto Esteriore dei Beni"
 #: field:stock.picking,internal_note:0
 msgid "Internal Note"
 msgstr "Nota Interna"
+
+#. module: stock_picking_extended
+#: field:stock.picking,invoice_state:0
+msgid "Invoice State"
+msgstr "Stato Fatture"
