Better management of price history, also add delete of cache on product supplier box inside product

--- a/product_price_history/i18n/it.po
+++ b/product_price_history/i18n/it.po
@@ -60,6 +60,11 @@ msgid "Date To"
 msgstr "Data Variazione"
 
 #. module: product_price_history
+#: field:product.price.history,supplier_id:0
+msgid "Supplier"
+msgstr "Fornitore"
+
+#. module: product_price_history
 #: model:ir.model,name:product_price_history.model_product_template
 msgid "Product Template"
 msgstr "Modello Prodotto"
