--- a/stock_picking_extended/i18n/it.po
+++ b/stock_picking_extended/i18n/it.po
@@ -521,6 +521,11 @@ msgid "Goods Ready"
 msgstr "Merce Pronta"
 
 #. module: stock_picking_extended
+#: view:stock.picking:0
+msgid "Delivery Data"
+msgstr "Delivery Data"
+
+#. module: stock_picking_extended
 #: field:stock.picking,week_nbr:0
 msgid "Week Number"
 msgstr "Settimana n."
