--- a/sale_order_requirement/i18n/it.po
+++ b/sale_order_requirement/i18n/it.po
@@ -101,10 +101,10 @@ msgid "Desired Qty"
 msgstr "Q.tà Desiderata"
 
 #. module: sale_order_requirement
-#: code:addons/sale_order_requirement/models/mrp.py:98
+#: code:addons/sale_order_requirement/models/mrp_production.py:135
 #, python-format
-msgid "Couldn't find a bill of material for this product."
-msgstr "Non c'è una distinta base per questo prodotto"
+msgid "Found a production order to enqueue to, but it does not have a bill of material."
+msgstr "Trovato un ordine di produzione a cui accodare, ma è senza distinta."
 
 #. module: sale_order_requirement
 #: field:temp.mrp.routing,temp_mrp_bom_id:0
@@ -222,7 +222,7 @@ msgid "Workcenter"
 msgstr "Centro di Lavoro"
 
 #. module: sale_order_requirement
-#: code:addons/sale_order_requirement/models/mrp.py:98
+#: code:addons/sale_order_requirement/models/mrp_production.py:135
 #, python-format
 msgid "Error"
 msgstr "Errore"
