now is possible to see partial amount on stock picking out

--- a/stock_picking_extended/i18n/it.po
+++ b/stock_picking_extended/i18n/it.po
@@ -474,6 +474,11 @@ msgid "Total Amount (VAT Excluded)"
 msgstr "Totale Ordine (IVA esclusa)"
 
 #. module: stock_picking_extended
+#: field:stock.picking,amount_partial:0
+msgid "Partial Amount (VAT Excluded)"
+msgstr "Importo Righe (IVA esclusa)"
+
+#. module: stock_picking_extended
 #: field:stock.picking,payment_term_id:0
 msgid "Payment Term"
 msgstr "Termine di pagamento"
